Fixed header so it takes full height of screen on mobile and made button position absolute

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 180px;
+  height: 100vh;
 }
 
 header h1 {
@@ -30,7 +30,7 @@ header h2 {
   font-size: 40px;
   font-weight: 400;
   line-height: 1.5;
-  padding-top: 40px;
+  padding: 12rem 0 5rem 0;
   margin: 0;
 }
 
@@ -41,6 +41,12 @@ header h3 {
   line-height: 1;
   letter-spacing: 5px;
   margin: 0;
+  padding-top: 2rem;
+}
+
+header .button {
+  position: absolute;
+  bottom: 8rem;
 }
 
 section {
@@ -168,6 +174,13 @@ footer p {
   margin: 0 auto;
 }
 
+.primary-button {
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+}
+
 .button {
   display: inline-block;
   font-family: "Roboto", sans-serif;
@@ -175,8 +188,8 @@ footer p {
   font-weight: 600;
   background: #885df1;
   color: #fff;
-  padding: 16px 32px;
-  margin: 36px 0 5px 0;
+  padding: 1rem 2rem;
+  margin: 2rem 0 0.5rem 0;
   border: 2px solid #885df1;
   border-radius: 100px;
   text-decoration: none;
@@ -186,8 +199,8 @@ footer p {
 .button:hover {
   color: #000;
   background: #fff;
-  padding: 16px 32px;
-  margin: 36px 0 5px 0;
+  padding: 1rem 2rem;
+  margin: 2rem 0 0.5rem 0;
 }
 
 .img-responsive {
@@ -250,14 +263,18 @@ section.more-songs h3 {
   }
 
   header h1 {
-    font-size: 45px;
+    font-size: 3rem;
     margin-bottom: 20px;
   }
 
   header h2 {
-    font-size: 25px;
+    font-size: 1.5rem;
     padding: 10px;
     line-height: 1;
+  }
+
+  header h3 {
+    font-size: 2rem;
   }
 
   header h3,
@@ -276,11 +293,6 @@ section.more-songs h3 {
   section.more-songs h2,
   section.grid-main h2 {
     font-size: 25px;
-  }
-
-  header .button {
-    padding: 10px 15px;
-    margin-bottom: 20px;
   }
 
   div.main-content {
